--- a/index.html
+++ b/index.html
@@ -364,7 +364,10 @@
         axios
           .post('http://localhost:5000/api/users', { name, password })
           .then((res) => res.data)
-					.then(console.log)
+          .then((data) => {
+            if (data.error) return console.error(data.error);
+            localStorage.setItem('token', data);
+          })
           .catch((e) => console.error(e));
         console.log(e);
       });
