--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="clearfix header_top">
           <div class="clearfix logo floatleft">
             <a href=""
-              ><h1><span>Yellow</span> Blog</h1></a
+              ><h1><span>Cupcake </span> Nation</h1></a
             >
           </div>
           <div class="clearfix search floatright">
@@ -42,27 +42,16 @@
           <nav>
             <ul id="nav">
               <li><a href="">Home</a></li>
-              <li><a href="">Category</a></li>
               <li id="dropdown">
                 <a href="">Drop Down</a>
                 <ul>
                   <li><a href="">Home</a></li>
                   <li><a href="">Category</a></li>
                   <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
-                  <li><a href="">Category</a></li>
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
                 </ul>
               </li>
-              <li><a href="">Category</a></li>
-              <li><a href="">Category</a></li>
-              <li><a href="">Category</a></li>
-              <li><a href="">Category</a></li>
               <li><a href="">Category</a></li>
               <li><a href="">Category</a></li>
               <li><a href="">About us</a></li>
@@ -198,7 +187,7 @@
         <div class="clearfix sidebar_container floatright">
           <div class="clearfix newsletter">
             <form id="register-form">
-              <h2>Signup for newsletter</h2>
+              <h2>Register</h2>
               <input name="name" type="text" placeholder="Username" id="mce-TEXT" />
               <input name="password" type="password" placeholder="Password" id="mce-PASSWORD" />
               <input type="submit" value="Submit" id="mc-embedded-subscribe" />
@@ -292,41 +281,6 @@
       </div>
     </section>
 
-    <section id="footer_bottom_area">
-      <div class="clearfix wrapper footer_bottom">
-        <div class="clearfix copyright floatleft">
-          <p>Copyright &copy; All rights reserved by <span>Wpfreeware.com</span></p>
-        </div>
-        <div class="clearfix social floatright">
-          <ul>
-            <li>
-              <a class="tooltip" title="Facebook" href=""><i class="fa fa-facebook-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="Twitter" href=""><i class="fa fa-twitter-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="Google+" href=""><i class="fa fa-google-plus-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="LinkedIn" href=""><i class="fa fa-linkedin-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="tumblr" href=""><i class="fa fa-tumblr-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="Pinterest" href=""><i class="fa fa-pinterest-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="RSS Feed" href=""><i class="fa fa-rss-square"></i></a>
-            </li>
-            <li>
-              <a class="tooltip" title="Sitemap" href=""><i class="fa fa-sitemap"></i> </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
     <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
