--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
             <ul class="pgwSlider">
               <li>
                 <img
-                  src="images/thumbs/megamind_07.jpg"
-                  alt="Paris, France"
-                  data-description="Eiffel Tower and Champ de Mars"
-                  data-large-src="images/slides/megamind_07.jpg"
+                  src="images/pexels-brigitte-tohm-239581.jpg"
+                  alt="French Macaron"
+                  data-description="French Macaron"
+                  data-large-src="images/pexels-brigitte-tohm-239581.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="images/thumbs/wall-e.jpg"
-                  alt="Montréal, QC, Canada"
-                  data-large-src="images/slides/wall-e.jpg"
-                  data-description="Eiffel Tower and Champ de Mars"
+                  src="images/pexels-valeria-boltneva-827513.jpg"
+                  alt="Red Fruit Cake"
+                  data-large-src="images/pexels-valeria-boltneva-827513.jpg"
+                  data-description="Red Fruit Cake"
                 />
               </li>
               <li>
                 <img
-                  src="images/thumbs/up-official-trailer-fake.jpg"
-                  alt="Shanghai, China"
-                  data-large-src="images/slides/up-official-trailer-fake.jpg"
-                  data-description="Shanghai ,chaina"
+                  src="images/pexels-shay-wood-574111.jpg"
+                  alt="Sweet Pancakes"
+                  data-large-src="images/pexels-shay-wood-574111.jpg"
+                  data-description="Sweet Pancakes"
                 />
               </li>
             </ul>
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <div class="clearfix post_detail">
-                <h2><a href="">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. </a></h2>
+                <h2><a href="">Doughnut </a></h2>
                 <div class="clearfix post-meta">
                   <p>
                     <span><i class="fa fa-user"></i> Admin</span>
@@ -115,11 +115,18 @@
                   </p>
                 </div>
                 <div class="clearfix post_excerpt">
-                  <img src="images/thumb.png" alt="" />
+                  <img src="images\pexels-jose-carranza-coico-9582084.jpg" alt="" />
                   <p>
-                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
-                    vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos
+                    Ingredients needed:
+
+1 ¼ cups milk
+2 ¼ teaspoons (one package) active dry yeast
+2 eggs
+8 tablespoons (1 stick) butter, melted and cooled
+¼ cup granulated sugar
+1 teaspoon salt
+4 ¼ cups all-purpose flour, plus more for rolling out the dough
+2 quarts neutral oil, for frying, plus more for the bowl.
                   </p>
                 </div>
                 <a href="">Continue Reading</a>
@@ -132,16 +139,30 @@
                 <p>January</p>
               </div>
               <div class="clearfix post_detail">
-                <h2><a href="">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. </a></h2>
+                <h2><a href="">Red Velvet Cupcakes </a></h2>
                 <div class="clearfix post-meta">
-                  <p><span>Admin</span> <span>20 Jan 2014</span> <span>4 comments</span> <span>Category</span></p>
+                  <p>
+                    <span>Admin</span> 
+                    <span>20 Jan 2014</span> 
+                    <span>4 comments</span> 
+                    <span>Category</span></p>
                 </div>
                 <div class="clearfix post_excerpt">
-                  <img src="images/thumb.png" alt="" />
+                  <img src="images\pexels-mikhail-nilov-9147796.jpg" alt="" />
                   <p>
-                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
-                    vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos
+                    Ingredients needed:
+
+2 ½ cups/320 grams cake flour
+1 ½ cups/300 grams granulated sugar
+1 teaspoon baking soda
+1 teaspoon fine sea salt
+1 teaspoon cocoa powder
+1 ½ cups/360 milliliters vegetable oil
+1 cup/240 milliliters buttermilk, at room temperature
+3 large eggs, at room temperature
+2 tablespoons red food coloring
+1 teaspoon white distilled vinegar
+1 teaspoon vanilla extract
                   </p>
                 </div>
                 <a href="">Continue Reading</a>
@@ -154,16 +175,25 @@
                 <p>January</p>
               </div>
               <div class="clearfix post_detail">
-                <h2><a href="">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. </a></h2>
+                <h2><a href="">Brownies </a></h2>
                 <div class="clearfix post-meta">
                   <p><span>Admin</span> <span>20 Jan 2014</span> <span>4 comments</span> <span>Category</span></p>
                 </div>
                 <div class="clearfix post_excerpt">
-                  <img src="images/thumb.png" alt="" />
+                  <img src="images\pexels-min-che-7491897.jpg" alt="" />
                   <p>
-                    Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
-                    vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia
-                    nostra, per inceptos
+                    Ingredients needed:
+
+1 1/2 cups granulated sugar*
+3/4 cup all-purpose flour
+2/3 cup cocoa powder, sifted if lumpy
+1/2 cup powdered sugar, sifted if lumpy
+1/2 cup dark chocolate chips
+3/4 teaspoons sea salt
+2 large eggs
+1/2 cup canola oil or extra-virgin olive oil**
+2 tablespoons water
+1/2 teaspoon vanilla
                   </p>
                 </div>
                 <a href="">Continue Reading</a>
@@ -174,7 +204,7 @@
           <div class="pagination">
             <nav>
               <ul>
-                <li><a href=""> << </a></li>
+                <li><a href=""> </a></li>
                 <li><a href="">1</a></li>
                 <li><a href="">2</a></li>
                 <li><a href="">3</a></li>
@@ -190,7 +220,7 @@
               <h2>Register</h2>
               <input name="name" type="text" placeholder="Username" id="mce-TEXT" />
               <input name="password" type="password" placeholder="Password" id="mce-PASSWORD" />
-              <input type="submit" value="Submit" id="mc-embedded-subscribe" />
+            <input type="submit" value="Submit" id="mc-embedded-subscribe" />
             </form>
           </div>
           <div class="clearfix sidebar">
@@ -219,21 +249,11 @@
             <div class="clearfix single_sidebar">
               <h2>Recent Post</h2>
               <ul>
-                <li>
-                  <a href="">Category Name <span>(12)</span></a>
-                </li>
-                <li>
-                  <a href="">Category Name <span>(12)</span></a>
-                </li>
-                <li>
-                  <a href="">Category Name <span>(12)</span></a>
-                </li>
-                <li>
-                  <a href="">Category Name <span>(12)</span></a>
-                </li>
-                <li>
-                  <a href="">Category Name <span>(12)</span></a>
-                </li>
+                <li class="cat-item"><a href="">Category Name</a>(12)</li>
+                <li class="cat-item"><a href="">Category Name </a>(12)</li>
+                <li class="cat-item"><a href="">Category Name</a>(12)</li>
+                <li class="cat-item"><a href="">Category Name </a>(12)</li>
+                <li class="cat-item"><a href="">Category Name </a>(12)</li>
               </ul>
             </div>
           </div>
